--- a/src/_includes/sass/partials/_posts.scss
+++ b/src/_includes/sass/partials/_posts.scss
@@ -122,8 +122,8 @@ main {
     .date {
         margin-top: 1.5rem;
         margin-bottom: 1.5rem;
-        display: flex;
-        align-items: center;
+        // display: flex;
+        // align-items: center;
     }
 }
 
